@@ -19,7 +19,7 @@
         </os>
       </activation>
       <properties>
-        <ui.test.vmargs>${tycho.testArgLine} -XstartOnFirstThread</ui.test.vmargs>
+        <ui.test.vmargs>${tycho.testArgLine} -XstartOnFirstThread -Xmx4g -XX:MaxPermSize=1g</ui.test.vmargs>
       </properties>
     </profile>
     <profile>
@@ -31,7 +31,7 @@
         </os>
       </activation>
       <properties>
-        <ui.test.vmargs>${tycho.testArgLine}</ui.test.vmargs>
+        <ui.test.vmargs>${tycho.testArgLine} -Xmx4g -XX:MaxPermSize=1g</ui.test.vmargs>
       </properties>
     </profile>
   </profiles>
@@ -44,7 +44,6 @@
         <configuration>
           <useUIHarness>true</useUIHarness>
           <useUIThread>false</useUIThread>
-          <argLine>${ui.test.vmargs}</argLine>
           <failIfNoTests>true</failIfNoTests>
           <showEclipseLog>true</showEclipseLog>
           <skip>false</skip>
